Cosmetic polishing. Improved consistency, removed confusing form buttons, general cleanup. Fixes #131.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@260 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -23,7 +23,7 @@ tr.browser-listhdr th {
   border-bottom: none;
   background: transparent;
 }
-#browser-list td { padding: 0 .5em; }
+#browser-list td { padding: .1em .5em; }
 th { text-align: left; }
 td.br-size-col,td.br-rev-col,td.br-date-col,td.br-summary-col,td.br-chg-col { border-left: 1px solid #eee; }
 td.br-icon-col { }
