Visually distinct wiki quoteblocks. More distinct timeline date-separators.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@261 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -16,7 +16,7 @@
 .timeline-daysep {
   font-size: 105%;
   border-bottom: 1px solid #d7d7d7;
-  
+  background: #f7f7f7;
 }
 .tl-day { 
   line-height: 130%; 
