Report errors are now promptly displayed. Fixes #123.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@269 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -167,9 +167,10 @@ table.wiki {
 }
 table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 #wiki-edit-page:hover { background: #ccb }
-.wiki-error { 
+.error { 
  background: #fdc; 
  border: 1px solid #b00;
  color: #b00;
  padding: .25em;
+ margin: 1em 0;
 }
