Overhaul of the search module.  * Added search for wiki pages.  * Search results layout and style.  * Dynamic highlighting of search results.  * Referrer-based search result highlighting for Trac, google and yahoo searches.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@271 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -150,8 +150,9 @@ tr.br-row-even:hover,tr.br-row-odd:hover { background: #eed; }
  border: 1px solid #ccc; 
  background: #eee;
  color: #666;
- padding: 0 .5em;
+ padding: .1em .5em;
  font-size: 90%;
+ white-space: nowrap;
 }
 .wikipage p {  margin-left: 1em }
 pre.wiki, pre.literal-block { 
@@ -174,3 +175,8 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
  padding: .25em;
  margin: 1em 0;
 }
+.searchword0 { background: #ff9; }
+.searchword1 { background: #cfc; }
+.searchword2 { background: #cff; }
+.searchword3 { background: #ccf; }
+.searchword4 { background: #fcf; }
