Don't display 'no results' before entering a query.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@272 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/search.css
+++ b/htdocs/css/search.css
@@ -13,6 +13,4 @@ a.result-title {  color: #33c; }
 }
 .result-match {  background: #ffc800; }
 b { font-weight: normal; }
-#search-notfound { 
-  margin: 2em;
-}
+#search-notfound { margin: 2em; font-size: 110%; }
