Support for dynamic reports. Use $FOO in a query to define a variable, give it a value by specifying FOO=bar in the URL. $USER is always set to authenticated user (or anonymous). Fixes #139 and most of #140.
Example report query:  
SELECT id AS ticket, summary FROM ticket WHERE owner='$USER' ORDER by id;


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@278 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/report.css
+++ b/htdocs/css/report.css
@@ -62,3 +62,4 @@ a.report-tktref:hover { background: #b00; color: #fff; }
 .color6-odd  { background: #f0f0f0; border-color: #ddd; color: #888; }
 .color6-even { background: #f7f7f7; border-color: #ddd; color: #888; }
 .color6-odd a, .color6-even a { color: #b66; }
+#report-notfound { margin: 2em; font-size: 110%; }
