Overhauled templates and layout for usability and accessibility. Changed ticket templates to be more user friendly and put focus on important information. Use javascript to autofocus on load. Fixes #147.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@280 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/search.css
+++ b/htdocs/css/search.css
@@ -1,8 +1,5 @@
-#search-result { 
- margin-left: .5em;
- margin-right: 3em;
-
-}
+#search-hdr { margin-bottom: 1em }
+#search-result { margin-left: .5em; margin-right: 3em; }
 .result-item { margin: 1.5em 0; }
 a.result-title {  color: #33c; }
 .result-body { font-size: 80%; }
