Search 'Quickjump' feature. Enter a TracLink to jump directly to the given module/page. Prepend a '!' to search instead of jump. Fixes #188.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@358 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -78,7 +78,7 @@ legend {
  font-size: 10px;
 }
 #search input { padding: 1px;  font-size: 10px; }
-#search input[type="submit"] { }
+#search label { display: none; }
 #hdrlogo { }
 #hdrlogo,#hdrlogo img,#hdrlogo:hover {
  float: left;
