--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -156,7 +156,7 @@ a.navbar-link:hover {
 #help a { color: #b44 }
 /* Wiki */
 #wiki-history {
-/*   visibility: hidden; */
+  visibility: hidden;
   background: #f7f7f0;
   border: 1px solid #999;
   font-size: 75%;
