--- a/htdocs/css/search.css
+++ b/htdocs/css/search.css
@@ -2,7 +2,8 @@
 #search-result { margin-left: .5em; margin-right: 3em; }
 .result-item { margin: 1.5em 0; }
 a.result-title {  color: #33c; }
-.result-body { font-size: 80%; }
+.result-keywords { color: #c33; }
+.result-body, .result-keywords { font-size: 80%; }
 .result-author, .result-date { 
  font-size: 80%;
  color: #090;
