Wikified report description support. Default reports have descriptions (that could use improvements). Visited-and-missing TracLinks are styled properly.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@405 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/report.css
+++ b/htdocs/css/report.css
@@ -5,6 +5,10 @@
  border-bottom: 2px solid #eee;
  font-size: 150%;
 }
+#report-descr { 
+ margin: 0 2em;
+ font-size: 90%;
+}
 .report-list { 
  width: 97%; 
  margin-left: 1em;
